--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       <div class="fv">
         <div class="top-img">
           <div class="logo">
-            <img src="img/logo.png" alt="">
+            <img src="logo.png" alt="">
           </div>
           <div class="topilu">
-            <img class="topilu" src="img/topilu.png" alt="">
+            <img class="topilu" src="topilu.png" alt="">
           </div>
 
         </div>
@@ -58,7 +58,7 @@
 
       <div class="ff" id="feature">
         <div class="ff-ctt-cp">
-          <img class="down-to-top" src="img/f01.jpg" alt="">
+          <img class="down-to-top" src="f01.jpg" alt="">
           <div class="ff-ttl down-to-top">
             <h3>FEATURE</h3>
             <h4>星駆花火大会の特徴</h4>
@@ -102,7 +102,7 @@
 
 
       <div class="fphoto">
-        <img src="img/fphoto.jpg" alt="">
+        <img src="fphoto.jpg" alt="">
       </div>
 
 
@@ -114,7 +114,7 @@
 
         <div class="ac-c">
           <div class="ac-cp down-to-top">
-            <img src="img/map.png" alt="">
+            <img src="map.png" alt="">
           </div>
           <div class="ac-cs down-to-top">
             <p>北木島へは伏越港発着の大福丸フェリーか金風呂丸フェリー、
@@ -129,7 +129,7 @@
         </div>
 
         <div class="ac-cs-tbl down-to-top">
-          <img src="img/t-tbl.png" alt="">
+          <img src="t-tbl.png" alt="">
         </div>
 
         <div class="ac-b down-to-top">
@@ -153,7 +153,7 @@
       <div class="btm" id="contact">
         <div class="btm-name">
           <div class="b-logo">
-            <img src="img/logo.png" alt="">
+            <img src="logo.png" alt="">
           </div>
           <p>一般財団法人 星駆花火財団<br>
             岡山県笠岡市北木島星駆町1-2</p>
