--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <footer>
       <p class="fcr">Copyright - all rights reserverd.</p>
       <div class="ship">
-        <img src="img/ship.png" alt="">
+        <img src="ship.png" alt="">
       </div>
     </footer>
   </body>
