--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="logo.png" alt="">
           </div>
           <div class="topilu">
-            <img class="topilu" src="topilu.png" alt="">
+            <img class="topilu" src="top-ilu2.png" alt="">
           </div>
 
         </div>
