--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
           <div class="w-cc down-to-top">
             <h3>クルーズ花火観覧！</h3>
-            <p class="frontStr">離島ならではの楽しみ方の一つ、クルーズ船での花火観覧があります。
-              夏の特別な思い出に、ぜひご利用ください。<br><br>要予約、料金：3,000円（税込）</p>
+            <p class="frontStr">離島ならではの楽しみ方の一つ、クルーズ船での花火観覧。
+              夏の特別な思い出に、ぜひご利用ください。要予約、先着順となります。</p>
             <p class="backStr backStr-y">02</p>
           </div>
 
@@ -96,6 +96,23 @@
             <p class="backStr backStr-g">03</p>
           </div>
         </div>
+        
+        <div class="ff" id="feature">
+          <div class="ff-ctt-cp">
+            <img class="down-to-top" src="ship.jpg" alt="">
+            <div class="ff-ttl down-to-top">
+              <h3>CRUISING</h3>
+              <h4>クルーズ船での花火観覧！</h4>
+              <div class="f-stc">
+                <p>渋滞や混雑を避け、快適さを重視する大人におすすめのクルーズ船での花火観覧。
+                  海上の特等席でゆっくりと、贅沢に花火を見ることができます。<br>
+                先着80名様、ご予約が必要となります。ご希望の方は下記よりご予約をお願いいたします。</p>
+              </div>
+              <div class="cr-link">
+                <a href="#">クルーズ船のご予約はこちら</a>
+              </div>
+            </div>
+          </div>
 
 
 
