--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <a href="#">お問い合わせ</a>
           </div>
           <div class="contact-link-a">
-            <a href="#">北木島公式ホームページ</a>
+            <a href="https://www.kasaoka-kankou.jp/island/kitagishima" target="_blank">北木島公式ホームページ</a>
           </div>
         </div>
 
