--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     </header>
 
     <main>
+      
+      <div class="start">
+        <p><img src="logo.png" alt=""></p>
+      </div>
 
       <div class="fv">
         <div class="top-img">
