--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     </header>
 
     <main>
+      
+      <div id="splash">
+    <div id="splash_logo">
+      <img src="logo.png" alt="" class="fadeUp">
+    </div>
+  </div>
 
       <div class="fv">
         <div class="top-img">
@@ -198,10 +204,7 @@
       <div class="ship">
         <img src="ship.png" alt="">
       </div>
-    </footer>
-      <div class="start">
-        <p><img src="logo.png" alt=""></p>
-      </div>
+      </footer>
   </body>
   <script src="script.js"></script>
 </html>
